[package]
name = "rlbot_gui_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
all = "warn"

[dependencies]
directories = "5.0.1"
iced = { version = "0.12.1", features = ["image", "advanced", "debug", "tokio"] }
iced_aw = "0.8.0"
native-dialog = { version = "0.7.0", features = ["windows_dpi_awareness", "windows_visual_styles"] }
tokio = { version = "1.37.0", default-features = false, features = ["fs"] }
toml_edit = "0.22.9"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true
